--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -323,6 +323,7 @@
       apt:
         name:
           - docker.io
+          - docker-compose
           - python3-dev
           - python3-pip
           - build-essential
@@ -390,7 +391,7 @@
     - name: Redémarrer docker
       service:
         use : service
-        name: docker
+        name: docker-compose
         state: restarted
 
 #     - name: Lancer Home Assistant dans Docker si Docker n'est pas déjà en cours d'exécution
