--- a/ad_windows/openvpn/server.conf
+++ b/ad_windows/openvpn/server.conf
@@ -10,6 +10,8 @@ server 10.8.0.0 255.255.255.0
 ifconfig-pool-persist /etc/openvpn/ipp.txt
 push "redirect-gateway def1 bypass-dhcp"
 push "dhcp-option DNS 10.8.0.3"
+push "route 192.168.0.0 255.255.255.0"
+push "route 192.168.1.0 255.255.255.0"
 keepalive 10 120
 cipher AES-256-CBC
 user nobody
