--- a/ad_windows/openvpn/server.conf
+++ b/ad_windows/openvpn/server.conf
@@ -1,22 +1,22 @@
 port 16387
 proto udp
 dev tun
-ca /etc/openvpn/ca.crt
-cert /etc/openvpn/server.crt
-key /etc/openvpn/server.key
-dh /etc/openvpn/dh.pem
-tls-auth /etc/openvpn/ta.key 0
-server 10.8.0.0 255.255.255.0
-ifconfig-pool-persist /etc/openvpn/ipp.txt
-push "redirect-gateway def1 bypass-dhcp"
-push "dhcp-option DNS 10.8.0.3"
+ca ca.crt
+cert server.crt
+key server.key
+dh dh.pem
+auth SHA256
+tls-auth ta.key 0
+server {{ vpn_subnet }} {{ vpn_netmask }}
 push "route 192.168.0.0 255.255.255.0"
 push "route 192.168.1.0 255.255.255.0"
+push "redirect-gateway def1 bypass-dhcp"
+ifconfig-pool-persist ipp.txt
 keepalive 10 120
 cipher AES-256-CBC
-user nobody
-group nogroup
 persist-key
 persist-tun
-status /etc/openvpn/openvpn-status.log
+status openvpn-status.log
+log-append /var/log/openvpn.log
 verb 3
+explicit-exit-notify 1
