--- a/ad_windows/openvpn/server.conf
+++ b/ad_windows/openvpn/server.conf
@@ -7,7 +7,7 @@ key server.key
 dh dh.pem
 auth SHA256
 tls-auth ta.key 0
-server {{ vpn_subnet }} {{ vpn_netmask }}
+server 10.9.0.0 255.255.255.0
 push "route 192.168.0.0 255.255.255.0"
 push "route 192.168.1.0 255.255.255.0"
 push "redirect-gateway def1 bypass-dhcp"
