--- a/ad_windows/openvpn/server.conf
+++ b/ad_windows/openvpn/server.conf
@@ -11,6 +11,7 @@ server 10.9.0.0 255.255.255.0
 push "route 192.168.0.0 255.255.255.0"
 push "route 192.168.1.0 255.255.255.0"
 push "route 10.8.0.0 255.255.255.0"
+push "route 10.9.0.0 255.255.255.0"
 push "redirect-gateway def1 bypass-dhcp"
 ifconfig-pool-persist ipp.txt
 keepalive 10 120
