--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -222,9 +222,11 @@
           dh dh.pem
           auth SHA256
           tls-auth ta.key 0
-          server {{ vpn_subnet }} {{ vpn_netmask }}
+          server 10.9.0.0 255.255.255.0
           push "route 192.168.0.0 255.255.255.0"
           push "route 192.168.1.0 255.255.255.0"
+          push "route 10.8.0.0 255.255.255.0"
+          push "route 10.9.0.0 255.255.255.0"
           ifconfig-pool-persist ipp.txt
           keepalive 10 120
           cipher AES-256-CBC
