--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -227,6 +227,8 @@
           push "route 192.168.1.0 255.255.255.0"
           push "route 10.8.0.0 255.255.255.0"
           push "route 10.9.0.0 255.255.255.0"
+          push "dhcp-option DNS 1.1.1.1"
+          push "dhcp-option DNS 1.0.0.1"
           ifconfig-pool-persist ipp.txt
           keepalive 10 120
           cipher AES-256-CBC
