--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -223,7 +223,7 @@
           auth SHA256
           tls-auth ta.key 0
           server 10.9.0.0 255.255.255.0
-          iroute 10.9.0.0 255.255.255.0
+          route 10.9.0.0 255.255.255.0
           push "route 192.168.0.0 255.255.255.0"
           push "route 192.168.1.0 255.255.255.0"
           push "route 10.8.0.0 255.255.255.0"
