--- a/ad_windows/openvpn/server.conf
+++ b/ad_windows/openvpn/server.conf
@@ -12,6 +12,7 @@ push "route 192.168.0.0 255.255.255.0"
 push "route 192.168.1.0 255.255.255.0"
 push "route 10.8.0.0 255.255.255.0"
 push "route 10.9.0.0 255.255.255.0"
+plugin /usr/lib/openvpn/plugins/openvpn-plugin-auth-pam.so /etc/pam.d/login
 ifconfig-pool-persist ipp.txt
 keepalive 10 120
 cipher AES-256-CBC
