--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -430,6 +430,7 @@
     #######################################
     - name: Redémarrer OpenVPN
       service:
+        use : service
         name: openvpn
         state: restarted
 
