--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -385,6 +385,7 @@
 
     - name: Démarrer le service OpenVPN
       service:
+        use : service
         name: openvpn
         state: restarted
         enabled: yes
