--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -1,4 +1,19 @@
 ---
+###################################################### Samba ########################################################################################
+- name: Réécrire entièrement le fichier smb.conf pour Samba
+  hosts: all
+  become: true
+  tasks:
+
+    - name: Vérifier la configuration Samba avec testparm
+      command: testparm
+      register: testparm_output
+      failed_when: "'Error' in testparm_output.stderr"
+      changed_when: false
+
+    - name: Reconfigurer le paquet samba-common-bin
+      command: dpkg --configure -a
+
 # ######################################################Mettre en place l'active directory##########################################################
 
 - name: Joindre une machine Ubuntu au domaine Active Directory
@@ -256,6 +271,13 @@
         mode: '777'
       loop:
         - /etc/openvpn
+
+
+    # Étape 10 : Générer le fichier client.ovpn
+    # - name: Créer le certificat et le fichier client.ovpn via Easy-RSA
+    #   command: ./easyrsa build-client-full client nopass
+    #   args:
+    #     chdir: /etc/openvpn/easy-rsa
 
     - name: Générer automatiquement le fichier client.ovpn
       shell: |
